Fix combo box popup jumping when switching themes

--- a/app/src/main/resources/io/xpipe/app/resources/style/prefs.css
+++ b/app/src/main/resources/io/xpipe/app/resources/style/prefs.css
@@ -53,3 +53,7 @@
     -fx-border-color: -color-accent-emphasis;
     -fx-border-width: 1 0 1 0;
 }
+
+.prefs .theme-switcher .combo-box-popup .list-view {
+    -fx-effect: NONE;
+}
